Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-7471

Crash (seg fault) in FxListItem

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 4.6.1
    • 4.6.0
    • None
    • Windows 7 Home Edition, 64-bit.
      Ubuntu 9.10
    • c016023

    Description

      I have been playing with QmlView embedded in a C++ application using QT 2009.05 release package and the qtdeclarative-4.6.0 release for this.

      I have a model based on QAbstractListModel that is then filtered by a QSortFilterProxyModel. This proxy is then attached to the QmlView and used inside my ListView as the model.

      I have an edit field doing the filtering on the proxy model on each textChanged(). Now when I type quickly I can get the ListView to seg fault in FxListItem. It seems that the "currentItem" list item is NULL (item 1 in the stack trace).

      I have reduced the project to the minimum and it is still reproducible. Just randomly type and remove letters in the edit field (moderately fast) to trigger the filtering and it will crash after a few seconds. There are also some other odd behaviours with the ListView. Sometimes it doesn't put the first item at the top of the view or it just starts scrolling down the list for a few seconds.

      Here is the stack trace.

      0 FxListItem::endPosition qmlgraphicslistview.cpp 151 0x00b399d9
      1 QmlGraphicsListView::trackedPositionChanged qmlgraphicslistview.cpp 2175 0x009b8337
      2 QmlGraphicsListView::qt_metacall moc_qmlgraphicslistview_p.cpp 204 0x00a675a6
      3 QMetaObject::metacall qmetaobject.cpp 237 0x6a200e14
      4 QMetaObject::activate qobject.cpp 3286 0x6a210c13
      5 QGraphicsObject::yChanged moc_qgraphicsitem.cpp 218 0x04176a41
      6 QGraphicsItemPrivate::setPosHelper qgraphicsitem.cpp 3413 0x04162ed0
      7 QmlGraphicsItemPrivate::setPosHelper qmlgraphicsitem_p.h 232 0x00aca363
      8 QGraphicsItem::setY qgraphicsitem.cpp 3379 0x04162d1b
      9 QGraphicsObject::qt_metacall moc_qgraphicsitem.cpp 161 0x0417685e
      10 QmlGraphicsItem::qt_metacall moc_qmlgraphicsitem.cpp 173 0x00994bf1
      11 QMetaObject::metacall qmetaobject.cpp 237 0x6a200e14
      12 QmlMetaPropertyPrivate::write qmlmetaproperty.cpp 849 0x009dbd81
      13 QmlMetaPropertyPrivate::writeValueProperty qmlmetaproperty.cpp 788 0x009db78e
      14 QmlMetaProperty::write qmlmetaproperty.cpp 975 0x009dc724
      15 QmlMetaProperty::write qmlmetaproperty.cpp 969 0x009dc69c
      16 QmlEaseFollowPrivate::tick qmleasefollow.cpp 216 0x0095f41b
      17 QTickAnimationProxy<QmlEaseFollowPrivate, &(QmlEaseFollowPrivate::tick(int))>::updateCurrentTime qmlanimation_p_p.h 195 0x00ac4bce
      18 QAbstractAnimation::setCurrentTime qabstractanimation.cpp 704 0x6a102785
      19 QUnifiedTimer::updateAnimationsTime qabstractanimation.cpp 208 0x6a101651
      20 QUnifiedTimer::timerEvent qabstractanimation.cpp 252 0x6a101919
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            martjone Martin Jones (closed Nokia identity) (Inactive)
            jodyfanning Jody Fanning
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes