Fix crash when removing multiple items. Also fix bugs in multiple item insertion and removal. Avoid scrolling to current item on item insertion and removal.

Task-number: QTBUG-7471